--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>NuttyPage </title>
+        <title>NuttyPage + Test </title>
         <style>
             body {
                 background: rgb(58, 58, 58);
