--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>NuttyPage</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
@@ -11,20 +11,12 @@
             Home
             <nav>
                 <ul>
-                    <li class="logo"><a href="index.html">Home </a></li>
+                    <li class="logo"><a href="../index.html">Home </a></li>
                     <li><a href="/pages/about.html">About </a></li>
                     <li><a href="/pages/developers.html">Developers</a></li>
                 </ul>
             </nav>
         </header>
-        <section id="Test">
-            Under Construction!
-        </section>
-        <section>
-            <section class="features">
-                Features to be set.
-            </section>
-        </section>
         <section>Definitely</section>
         <section>Lots o'</section>
         <footer>fun</footer>
