--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html>
 
     <head>
-        <title>NuttyPage</title>
+        <title>Phantom Pixel Studios</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <header>
-            Home
-            <nav>
-                <ul>
-                    <li class="logo"><a href="index.html">Home </a></li>
-                    <li><a href="/pages/about.html">About </a></li>
-                    <li><a href="/pages/developers.html">Developers</a></li>
-                </ul>
-            </nav>
+            Home-Temporary ID
+            <div class="banner"> Banner Here</div>
         </header>
-        <section id="Test">
-            Under Construction!
+        <section class="section-1">
+            <div>
+                <nav class="pages-holder">
+                    <div class="logo"> <a href="index.html">Home </a></div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
+                    </div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/developers.html">Developers</a> </div>
+                    </div>
+                </nav>
+            </div>
+            <div class="media-holder">
+                <div>test1</div>
+                <div>test2</div>
+                <div>text3</div>
+            </div>
+            <div class="media-holder">
+                test4
+            </div>
         </section>
-        <section>
-            <section class="features">
-                Features to be set.
-            </section>
-        </section>
-        <section>Definitely</section>
-        <section>Lots o'</section>
-        <footer>fun</footer>
+        <footer>
+            Legalese info feed socmedia blah blah blah
+        </footer>
     </body>
 
 </html>
