--- a/pages/about.html
+++ b/pages/about.html
@@ -2,24 +2,36 @@
 <html>
 
     <head>
-        <title>NuttyPage</title>
+        <title>About-PPS</title>
         <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <header>
-            Home
-            <nav>
-                <ul>
-                    <li class="logo"><a href="../index.html">Home </a></li>
-                    <li><a href="/pages/about.html">About </a></li>
-                    <li><a href="/pages/developers.html">Developers</a></li>
-                </ul>
-            </nav>
+            About-Temporary ID
+            <div class="banner"> Banner Here</div>
         </header>
-        <section>Definitely</section>
-        <section>Lots o'</section>
-        <footer>fun</footer>
+        <section class="section-1">
+            <div>
+                <nav class="pages-holder">
+                    <div class="logo"> <a href="../index.html">Home </a></div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
+                    </div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/developers.html">Developers</a> </div>
+                    </div>
+                </nav>
+            </div>
+        </section>
+        <section class="section-2">
+            <div class="media-holder">
+                Text gobbldigook about us what we do mission statement, etc
+            </div>
+        </section>
+        <footer>
+            Legalese info feed socmedia blah blah blah
+        </footer>
     </body>
 
 </html>
