--- a/pages/developers.html
+++ b/pages/developers.html
@@ -2,28 +2,43 @@
 <html>
 
     <head>
-        <title>Developers</title>
+        <title>Developers-PPS</title>
         <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <header>
-            Home
-            <nav>
-                <ul>
-                    <li class="logo"><a href="../index.html">Home </a></li>
-                    <li><a href="/pages/about.html">About </a></li>
-                    <li><a href="/pages/developers.html">Developers</a></li>
-                </ul>
-            </nav>
+            Developers-Temporary ID
+            <div class="banner"> Banner Here</div>
         </header>
-        <section class="developers">
-            <ul>
-                <li>Nutty</li>
-                <li>Xian</li>
-            </ul>
+        <section class="section-1">
+            <div>
+                <nav class="pages-holder">
+                    <div class="logo"> <a href="../index.html">Home </a></div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
+                    </div>
+                    <div class="pages-buttons">
+                        <div class="pages-text"> <a href="/pages/developers.html">Developers</a> </div>
+                    </div>
+                </nav>
+            </div>
         </section>
-        <footer>Something Cool</footer>
+        <section class="section-2">
+            <div class="developer-holder">
+                <div class="developer-box" style="background-color: aqua;"></div>
+                <div class="developer-box"></div>
+                <div class="developer-box" style="background-color: black;"> Xian</div>
+            </div>
+            <div class="developer-holder">
+                <div class="developer-box" style="background-color: aqua;"></div>
+                <div class="developer-box"></div>
+                <div class="developer-box" style="background-color: black;"> Nutty</div>
+            </div>
+        </section>
+        <footer>
+            Legalese info feed socmedia blah blah blah
+        </footer>
     </body>
 
 </html>
