--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Home-Temporary ID
             <div class="banner"> Banner Here</div>
         </header>
-        <section class="section-1">
+        <div class="section-1">
             <div>
                 <nav class="pages-holder">
                     <div class="logo"> <a href="index.html">Home </a></div>
@@ -31,7 +31,7 @@
             <div class="media-holder">
                 test4
             </div>
-        </section>
+        </div>
         <footer>
             Legalese info feed socmedia blah blah blah
         </footer>
