--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
             About-Temporary ID
             <div class="banner"> Banner Here</div>
         </header>
-        <section class="section-1">
+        <div class="section-1">
             <div>
                 <nav class="pages-holder">
                     <div class="logo"> <a href="../index.html">Home </a></div>
@@ -23,12 +23,12 @@
                     </div>
                 </nav>
             </div>
-        </section>
-        <section class="section-2">
+        </div>
+        <div class="section-2">
             <div class="media-holder">
                 Text gobbldigook about us what we do mission statement, etc
             </div>
-        </section>
+        </div>
         <footer>
             Legalese info feed socmedia blah blah blah
         </footer>
