--- a/pages/developers.html
+++ b/pages/developers.html
@@ -11,7 +11,7 @@
             Developers-Temporary ID
             <div class="banner"> Banner Here</div>
         </header>
-        <section class="section-1">
+        <div class="section-1">
             <div>
                 <nav class="pages-holder">
                     <div class="logo"> <a href="../index.html">Home </a></div>
@@ -23,8 +23,8 @@
                     </div>
                 </nav>
             </div>
-        </section>
-        <section class="section-2">
+        </div>
+        <div class="section-2">
             <div class="developer-holder">
                 <div class="developer-box" style="background-color: aqua;"></div>
                 <div class="developer-box"></div>
@@ -35,7 +35,7 @@
                 <div class="developer-box"></div>
                 <div class="developer-box" style="background-color: black;"> Nutty</div>
             </div>
-        </section>
+        </div>
         <footer>
             Legalese info feed socmedia blah blah blah
         </footer>
