--- a/home.html
+++ b/home.html
@@ -3,24 +3,28 @@
 
     <head>
         <title>Phantom Pixel Studios</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-home.css">
     </head>
 
     <body>
         <header>
             Home-Temporary ID
-            <div class="banner"> Banner Here</div>
+            <div class="banner">
+                <div class="banner-g1"> </div>
+                <div class="banner-g2"> </div>
+            </div>
         </header>
         <div class="section-1">
             <div>
                 <nav class="pages-holder">
-                    <div class="logo"> <a href="index.html">Home </a></div>
-                    <div class="pages-buttons">
-                        <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
+                    <div class="logo"> <a class="logo-home" href="home.html">Home </a></div>
+                    <div class="pages-text">
+                        <div class="pages-buttons"></div><a href="/pages/about.html">About </a>
                     </div>
-                    <div class="pages-buttons">
-                        <div class="pages-text"> <a href="/pages/developers.html">Developers</a> </div>
+                    <div class="pages-text">
+                        <div class="pages-buttons"></div> <a href="/pages/developers.html">Developers</a>
                     </div>
+
                 </nav>
             </div>
             <div class="media-holder">
