--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>About-PPS</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../styles-home.css">
     </head>
 
     <body>
@@ -14,7 +14,7 @@
         <div class="section-1">
             <div>
                 <nav class="pages-holder">
-                    <div class="logo"> <a href="../index.html">Home </a></div>
+                    <div class="logo"> <a class="logo-home" href="../home.html">Home </a></div>
                     <div class="pages-buttons">
                         <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
                     </div>
