--- a/pages/developers.html
+++ b/pages/developers.html
@@ -3,18 +3,21 @@
 
     <head>
         <title>Developers-PPS</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../styles-home.css">
     </head>
 
     <body>
         <header>
             Developers-Temporary ID
-            <div class="banner"> Banner Here</div>
+            <div class="banner"> Banner Here
+                <div class="banner-g1"> </div>
+                <div class="banner-g2"> </div>
+            </div>
         </header>
         <div class="section-1">
             <div>
                 <nav class="pages-holder">
-                    <div class="logo"> <a href="../index.html">Home </a></div>
+                    <div class="logo"> <a class="logo-home" href="../home.html">Home </a></div>
                     <div class="pages-buttons">
                         <div class="pages-text"> <a href="/pages/about.html">About </a> </div>
                     </div>
